syntax = "proto3";

package C12S.AgentQueue;

option go_package = "../api";

service AgentQueue {
  rpc DeseminateConfig(DeseminateConfigRequest) returns (DeseminateConfigResponse);
  rpc JoinCluster(JoinClusterRequest) returns (JoinClusterResponse);
}

message DeseminateConfigRequest {
  string node_id = 1;
  bytes config = 2;
  string webhook = 3;
}

message DeseminateConfigResponse {}

message JoinClusterRequest {
  string node_id = 1;
  string join_address = 2;
}

message JoinClusterResponse {}